# knowledge-checker

./: .gitignore
apps/ai-service/: pyproject.toml
apps/ai-service/api/: main.py
apps/ai-service/api/bootstrap/: app_factory.py  lifespan.py  middleware.py
apps/ai-service/config/: settings.py
apps/ai-service/core/: singletons.py  startup.py
apps/ai-service/exceptions/: base.py  client.py  client_database.py  database.py  domain.py  infrastructure.py  server.py  session.py
apps/ai-service/fastapi_app/: dependencies.py  error_handler.py  main.py
apps/ai-service/fastapi_app/api/: dependencies.py
apps/ai-service/fastapi_app/bootstrap/: app_factory.py  exception.py  lifespan.py  middleware.py  utils.py
apps/ai-service/fastapi_app/config/: settings.py
apps/ai-service/fastapi_app/core/: singletons.py
apps/ai-service/fastapi_app/graph/: dependencies.py
apps/ai-service/graph/: dependencies.py  graph.py
apps/ai-service/infrastructure/: __init__.py  database.py  llm.py  redis_client.py
apps/ai-service/livekit_worker/: agent.py  entrypoint.py  main.py
apps/ai-service/models/: __init__.py  context.py  enums.py  evaluations.py  graph_state.py  llm.py  sessions.py  turns.py
apps/ai-service/prompts/: registry.py
apps/ai-service/repositories/: __init__.py  cache_repository.py  session_context_repo.py  session_repository.py  turn_repository.py
apps/ai-service/services/: context_service.py  difficulty_service.py  evaluation_service.py  hint_service.py  question_service.py  session_lifecycle_service.py  token_service.py
apps/ai-service/test/: main.py
(+88 files in other folders)
