[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "upstash-redis>=1.7.0",
]
