[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "livekit-agents[cartesia,deepgram]>=1.6.2",
    "livekit-api>=1.1.0",
    "redis>=7.4.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "upstash-redis>=1.7.0",
]
